force-app/main/default/objects/KimbleOne__ForecastTimesheet__c/KimbleOne__ForecastTimesheet__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Forecast Timesheet</label>
    <nameField>
        <label>ForecastTimesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Timesheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>