force-app/main/default/objects/KimbleOne__ForecastTimesheet__c/fields/KimbleOne__Approver2User__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver2User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ForecastTimesheetsApprover2User</relationshipName>
    <type>Lookup</type>
</CustomField>