force-app/main/default/objects/KimbleOne__ForecastTimesheet__c/fields/KimbleOne__EarliestForecastTimeEntryDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestForecastTimeEntryDate__c</fullName>
    <label>Earliest Forecast Time Entry</label>
    <type>Date</type>
</CustomField>