force-app/main/default/objects/KimbleOne__ForecastTimesheet__c/fields/KimbleOne__LatestForecastTimeEntryDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestForecastTimeEntryDate__c</fullName>
    <label>Latest Forecast Time Entry</label>
    <type>Date</type>
</CustomField>