force-app/main/default/objects/KimbleOne__ForecastTimesheet__c/fields/KimbleOne__TimePeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePeriodStartDate__c</fullName>
    <formula>KimbleOne__TimePeriod__r.KimbleOne__StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Period Start Date</label>
    <type>Date</type>
</CustomField>