force-app/main/default/objects/KimbleOne__ForecastTimesheet__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__ApprovalStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>